# miniocaml

./: .gitignore  Makefile  README.md  compiler_test.sh
benches/: Makefile  input  tarai.c  tarai.ml  tarai.mml  tarai.py
examples/: fib1.mml  fun1.mml  fun2.mml  fun3.mml  fun4.mml  fun5.mml  head1.mml  head2.mml  let1.mml  list1.mml  list2.mml  list3.mml  list_of_fun1.mml  list_sum.mml  match1.mml  match2.mml  match3.mml  read_int1.mml  read_int2.mml  rec1.mml  rec2.mml  rec3.mml  rec4.mml  shadow1.mml  test.mml  type.mml  unit1.mml  unit2.mml  unit3.mml
src/: .merlin  dune  eval.ml  exp.ml  irgen.ml  lexer.mll  main.ml  match_completeness.ml  miniocaml.ml  parser.mly  parser_state.ml  parser_wrapper.ml  tinf.ml  type.ml  value.ml  zam.ml  zam_compile.ml
test/: dune  test.ml
