(ocamllex lexer)
(ocamlyacc parser)

(library
 (name main)
 (wrapped false)
 (libraries llvm llvm.analysis llvm.scalar_opts llvm.executionengine llvm.target)
 (modules lexer parser main eval exp value type tinf irgen))

(executable
 (name miniocaml)
 (libraries main extlib)
 (modules miniocaml))

(env
 (dev
  (flags (:standard -warn-error -a))))